# nautical

./: .clang-format  .gitignore  .syntastic  .travis.yml  CMakeLists.txt  Makefile  README.md  setup-dependencies.sh
CMake/: FindCUnit.cmake  FindFreeImage.cmake  FindIniParser.cmake
bindings/: CMakeLists.txt  nautical.i  vector2.i  vector3.i  vector4.i
bindings/lib/: color.i  engine.i  gamecomponent.i  gameobject.i  keyboard.i  rendercomponent.i  script.i  vector2.i  vector3.i  vector4.i
bindings/lua/: CMakeLists.txt  nauticalua.i
bindings/perl/: CMakeLists.txt  nauticalpl.i
bindings/python/: CMakeLists.txt  PythonLoader.cpp  nauticalpy.i  pythonloader.cpp
include/: engine.h  gamecomponent.h  gameobject.h  nauticalscript.h  script.h  scriptloader.h  transform.h  util.h
include/components/: rendercomponent.h
include/graphics/: color.h  shaderloader.h  textureloader.h  window.h
include/math/: matrix3.h  matrix4.h  vector2.h  vector3.h  vector4.h
include/scripts/: Loaders.h  PythonLoader.h  loaders.h  pythonloader.h  pythonscript.h
include/systems/: input.h  renderer.h
include/systems/input/: keyboard.h
resources/: config.ini  config.json  frag.glsl  vert.glsl
src/: engine.cpp  gameobject.cpp  main.cpp  util.cpp  util.cpp.in
src/components/: rendercomponent.cpp
src/graphics/: shaderloader.cpp  textureloader.cpp  window.cpp
src/scripts/: pythonscript.cpp
src/systems/: input.cpp  renderer.cpp
src/systems/input/: keyboard.cpp
tests/: main.cpp  matrix3.cpp  matrix3.h  matrix4.cpp  matrix4.h  test.h  test_list.h  vector2.cpp  vector2.h  vector3.cpp  vector3.h  vector4.cpp  vector4.h
